samples/_failures_safe/1761348947_9cf606_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5e760d8.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_d5e760d8.c:154:14: error: ‘TOKEN_N’ undeclared (first use in this function); did you mean ‘TOKEN_EOF’?
  154 |         case TOKEN_N
      |              ^~~~~~~
      |              TOKEN_EOF
./samples/SAFE/__tmp_d5e760d8.c:154:14: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_d5e760d8.c:154:9: error: expected ‘:’ or ‘...’ at end of input
  154 |         case TOKEN_N
      |         ^~~~
./samples/SAFE/__tmp_d5e760d8.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d5e760d8.c:154:9: error: expected declaration or statement at end of input
